--- a/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoFragment.html
@@ -626,6 +626,9 @@
 
 						<!-- ALLEGATO 4 (FUNZIONIGRAMMA) -->
 						<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, true, funzionigramma,  ${!showOnly ? 'funzionigramma' : null}, null, null, true, ${mode}, true)" ></th:block>
+
+						<input id="submitButton" type="submit" style="display: none;" />
+
 					</form>
 				</div>
 			</div>
