--- a/src/main/resources/templates/persona/personaFragment.html
+++ b/src/main/resources/templates/persona/personaFragment.html
@@ -470,6 +470,8 @@
 
 						<div th:if="${valutabile and personaWrapper.persona.delegatoLegaleRappresentante}" class="divider"></div>
 
+						<input id="submitButton" type="submit" style="display: none;" />
+
 					</form>
 				</div>
 			</div>
