--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiEdit.html
@@ -13,7 +13,7 @@
 						<h2 th:text="#{label.modifica} + ' ' + #{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
 							<th:block th:unless="${#lists.isEmpty(accreditamentoAllegatiWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamentoAllegati" type="submit"></button>
+								<label class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							</th:block>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}/edit?tab=tab3|}"></a>
 						</div>
