--- a/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoAllegatiValidate.html
@@ -39,7 +39,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.valutazione} + ' ' + #{label.allegati}">allegati</h2>
 						<div class="pull-right buttons-header">
-							<button th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" form="formAccreditamentoAllegati" type="submit"></button>
+							<label th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${accreditamentoAllegatiWrapper.accreditamentoId}/validate?tab=tab3|}"></a>
 						</div>
