--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -13,7 +13,7 @@
 						<h2 th:text="#{label.modifica} + ' ' + #{label.dati_attività}">Dati relativi all’attività</h2>
 						<div class="pull-right buttons-header">
 							<th:block th:unless="${#lists.isEmpty(datiAccreditamentoWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formDatiAccreditamento" type="submit"></button>
+								<label class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							</th:block>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${datiAccreditamentoWrapper.accreditamentoId}/edit|}"></a>
 						</div>
