--- a/src/main/resources/templates/evento/eventoEdit.html
+++ b/src/main/resources/templates/evento/eventoEdit.html
@@ -13,7 +13,7 @@
 						<h2 th:text="#{${eventoWrapper.evento.new} ? label.creazione_nuovo_evento : label.modifica_evento}">Evento</h2>
 						<div class="pull-right buttons-header">
 							<th:block th:unless="${#lists.isEmpty(eventoWrapper.idEditabili)}">
-								<button class="btn btn-success pull-right" th:text="#{label.salva}" form="formEvento" type="submit"></button>
+								<label class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							</th:block>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|${returnLink}|}"></a>
 						</div>
