--- a/src/main/resources/templates/provider/providerFragment.html
+++ b/src/main/resources/templates/provider/providerFragment.html
@@ -469,6 +469,9 @@
 								<input type="hidden" th:field="${providerWrapper.mappa[__${T(it.tredi.ecm.dao.enumlist.IdFieldEnum).getIdField('provider.noProfit')}__].id}" />
 		                    </th:block>
 							<div th:if="${#fields.hasErrors('providerWrapper.provider.noProfit')}" class="alert" th:classappend="${valutabile} ? 'col-xs-12'" th:errors="${providerWrapper.provider.noProfit}"></div>
+
+							<input id="submitButton" type="submit" style="display: none;" />
+
 						</div>
 					</form>
 				</div>
