--- a/src/main/resources/templates/sede/sedeValidate.html
+++ b/src/main/resources/templates/sede/sedeValidate.html
@@ -41,7 +41,7 @@
 					<div class="x_title">
 						<h2 th:text="#{label.valutazione} + ' ' + ${sedeWrapper.tipologiaSede == 'SedeLegale' ? #messages.msg('label.sede_legale') : #messages.msg('label.sede_operativa')}">label.info_sede</h2>
 						<div class="pull-right buttons-header">
-							<button th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" form="formSede" type="submit"></button>
+							<label th:if="${canValutaDomanda}" class="btn btn-success pull-right" th:text="#{label.salva}" for="submitButton"></label>
 							<button class="btn btn-primary pull-right" th:text="#{label.tutte_le_valutazioni}" data-toggle="modal" data-target=".modal-altreValutazioni"></button>
 							<a class="btn btn-primary pull-right" th:text="#{label.indietro}" th:href="@{|/accreditamento/${sedeWrapper.accreditamentoId}/validate|}"></a>
 						</div>
