--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -39,15 +39,13 @@
 						<h2 th:text="${#messages.msg('label.provider_accreditamento') + ' ' + accreditamentoWrapper.provider.denominazioneLegale + ' (' + accreditamentoWrapper.provider.codiceFiscale + ') ' + #messages.msg('label.tipo_provider') + ' ' + accreditamentoWrapper.provider.tipoOrganizzatore.gruppo}"></h2>
 						<div class="pull-right buttons-header">
 							<div class="dropdown pull-right">
-								<a class="btn btn-primary" th:text="#{label.indietro}" th:href="@{|/provider/${accreditamentoWrapper.provider.id}/accreditamento/list|}"></a>
+								<a class="btn btn-primary ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a>
   								<button class="btn btn-success dropdown-toggle" type="button" data-toggle="dropdown"  th:if="${#authentication.principal.hasProfile('SEGRETERIA')}">
 									<span th:text="#{label.menu_azioni}"></span>
 									<span class="caret"></span>
 								</button>
 								<!-- menù raggruppato per segreteria -->
 								<ul class="dropdown-menu actions">
-									<li><a th:text="#{label.mostra_riepilogo}" class="ajaxCallShowAll" data-toggle="modal" data-target=".modal-showAll"></a></li>
-									<li class="divider actions"></li>
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canShowValutazione}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
@@ -58,13 +56,12 @@
 								</ul>
 								<!-- menù a pulsanti separati per il provider -->
 								<th:block th:if="${#authentication.principal.hasProfile('PROVIDER')}">
-									<a class="btn btn-primary ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a>
 									<a th:if="${accreditamentoWrapper.accreditamento.bozza}" class="btn btn-success" th:text="#{label.modifica}" onclick="switchMode('edit')"></a>
 								</th:block>
 								<!-- menù a pulsanti separati per il referee -->
 								<th:block th:if="${#authentication.principal.hasProfile('REFEREE')}">
-									<a class="btn btn-primary ajaxCallShowAll" th:text="#{label.mostra_riepilogo}" data-toggle="modal" data-target=".modal-showAll"></a>
-									<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-sucess" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
+									<a th:if="${accreditamentoWrapper.canValutaDomanda}" class="btn btn-success" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a>
+									<a th:if="${accreditamentoWrapper.canShowValutazione}" class="btn btn-success" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a>
 								</th:block>
 							</div>
 						</div>
