--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -220,8 +220,8 @@
 					location.href = url;
 				}
 
-				$('.ajaxCallShowAll').one("click", populateShowAll());
-				$('.ajaxCallShowAllValutazioni').one("click", populateShowAllValutazioni());
+				$('.ajaxCallShowAll').one("click", populateShowAll);
+				$('.ajaxCallShowAllValutazioni').one("click", populateShowAllValutazioni);
 
 			/*]]>*/
 			</script>
