--- a/src/main/resources/templates/fragments/sidebarAndTop.html
+++ b/src/main/resources/templates/fragments/sidebarAndTop.html
@@ -127,7 +127,7 @@
 		                </ul>
 		              </li>
 		              <li class="">
-					    <a href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.help}"></a>
+					    <a target="new" href="http://wiki.3di.it/doku.php?id=documentazione_3di:progetto_ecm:indice" th:text="#{label.help}"></a>
 					  </li>
               		</ul>
 				</nav>
