--- a/src/main/resources/templates/provider/providerForm.html
+++ b/src/main/resources/templates/provider/providerForm.html
@@ -34,7 +34,8 @@
 								<a href="#step-3" class="disabled wizard-element" isdone="0" rel="3">
 									<span class="step_no">3</span>
 									<span class="step_descr">Step 3
-										<br/><small th:text="#{label.dati_del_legale_rappresentante}">label.dati_del_legale_rappresentante</small>
+										<br/><small>Dati del Legale</small>
+										<br/><small>Rappresentante</small>
 									</span>
 								</a>
 							</li>
@@ -46,6 +47,10 @@
 								<input th:if="${providerForm.provider.id}" type="hidden" name="editId" th:value="${providerForm.provider.id}" />
 
 								<div id="step-1" class="wizard_content" style="display: block;">
+								
+									<!-- info -->
+									<h2 class="col-xs-12 alert alert-info with-margin-top text-center" th:text="#{message.info_login}"></h2>
+								
 									<!-- username -->
 									<div class="item form-group" th:classappend="${#fields.hasErrors('providerForm.provider.account.username')} ? 'bad'">
 										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="nomeUtente">
@@ -77,7 +82,7 @@
 									<!-- denominazione legale -->
 									<div class="item form-group" th:classappend="${#fields.hasErrors('providerForm.provider.denominazioneLegale')} ? 'bad'">
 										<label class="control-label col-md-3 col-sm-3 col-xs-12" for="denominazioneLegale">
-											<span class="required" th:text="#{label.denominazione_legale}">label.denominazione_legale</span>
+											<span class="required" th:text="#{label.denominazione_legale_login}">label.denominazione_legale</span>
 											<span class="required">*</span>
 										</label>
 										<div class="col-md-6 col-sm-6 col-xs-12">
