riepilogo valutazioni anke nella show di accreditamento

--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -98,7 +98,7 @@
 				</div>
 
 				<!-- modale showAllValutazioni -->
-				<div id="showAllValutazioni-modal" class="modal fade modal-showAllValutazioni"
+				<!-- <div id="showAllValutazioni-modal" class="modal fade modal-showAllValutazioni"
 					data-model-index="1" role="dialog">
 					<div class="modal-dialog modal-lg">
 						<div class="modal-content">
@@ -142,14 +142,15 @@
 									</div>
 								</div>
 
-								<!-- fragment show all -->
+								fragment show all
 								<th:block th:include="valutazione/valutazioneShowAll :: showAllValutazioni"></th:block>
 
 							</div>
 						</div>
 					</div>
-				</div>
+				</div> -->
 
+				<th:block th:include="fragments/modaleRiepilogoValutazioni :: modaleRiepilogoValutazioni"></th:block>
 
 				<div class="x_panel">
 					<div class="x_title x_menu">
