--- a/src/main/resources/templates/accreditamento/accreditamentoShow.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoShow.html
@@ -33,8 +33,61 @@
 						</div>
 					</div>
 				</div>
-				
-				<th:block th:include="fragments/modaleRiepilogoValutazioni :: modaleRiepilogoValutazioni"></th:block>
+
+				<!-- modale reassign -->
+				<div th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" id="reassign-modal" class="modal fade modal-reassign"
+					data-model-index="1" role="dialog">
+					<div class="modal-dialog modal-lg">
+						<div class="modal-content">
+							<div class="modal-header">
+								<button type="button" class="close" data-dismiss="modal">
+									<span aria-hidden="true">×</span>
+								</button>
+								<h4 class="modal-title" id="myModalLabel"
+									th:text="#{label.assegna_nuovo_gruppo_referee}">Assegna la domanda di Accreditamento ad un nuovo gruppo di Referee</h4>
+							</div>
+							<div class="modal-body">
+								<form id="formRiassegnaGruppoCrecm" class="form-horizontal"
+									th:action="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/reassignEvaluation|}"
+									method="post" enctype="multipart/form-data"
+									novalidate="novalidate">
+
+									<div>
+										<h4 th:text="#{label.seleziona_referee}"></h4>
+										<div class="item modalAlert" th:classappend="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')} ? 'bad'">
+											<select id="referee"
+												class="selectpicker required"
+												data-width="100%" data-style="btn-primary"
+												data-max-options="3"
+												multiple="multiple"
+												th:field="${accreditamentoWrapper.refereeGroup}"
+												data-actions-box="false" data-size="10"
+												data-hide-disabled="false"
+												title="Seleziona i referee..."
+												th:remove="all-but-first">
+												<option
+													th:each="referee, row: ${refereeList}"
+													th:value="${referee.id}"
+													th:text="${referee.nome + ' ' + referee.cognome}">
+												</option>
+											</select>
+											<div th:if="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')}" class="alert" th:errors="${accreditamentoWrapper.refereeGroup}"></div>
+										</div>
+									</div>
+
+									<input id="submitButtonModal" type="submit" style="display: none;" />
+
+								</form>
+							</div>
+							<div class="modal-footer">
+          						<label for="submitButtonModal" class="btn btn-success pull-right" th:text="#{label.salva}">Salva</label>
+          						<button type="button" class="btn btn-primary pull-right" data-dismiss="modal" th:text="#{label.chiudi}">Chiudi</button>
+        					</div>
+						</div>
+					</div>
+				</div>
+
+				<th:block th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" th:include="fragments/modaleRiepilogoValutazioni :: modaleRiepilogoValutazioni"></th:block>
 
 				<div class="x_panel">
 					<div class="x_title x_menu">
@@ -49,14 +102,15 @@
 								</button>
 								<!-- menù raggruppato per segreteria -->
 								<ul class="dropdown-menu actions">
-									<li><a th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button" class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}"	data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canShowValutazioneRiepilogo}" type="button" class="ajaxCallShowAllValutazioni" th:text="#{label.mostra_riepilogo_valutazioni}" data-toggle="modal" data-target=".modal-showAllValutazioni"></a></li>
 									<li><a th:text="#{label.modifica}" onclick="switchMode('edit')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canShowValutazione}" th:text="#{label.mostra_valutazione}" onclick="switchMode('validate')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canValutaDomanda}" th:text="#{label.valuta_domanda}" onclick="switchMode('validate')"></a></li>
 									<li class="divider actions"></li>
 									<li><a th:text="#{label.abilita_id_editabili}" onclick="alert('TODO')"></a></li>
 									<li><a th:if="${accreditamentoWrapper.canPrendiInCarica}" th:href="@{|/accreditamento/${accreditamentoWrapper.accreditamento.id}/takeCharge|}" th:text="#{label.prendi_in_carica}"></a></li>
-									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" onclick="alert('TODO')"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canAssegnaNuovoGruppo}" th:text="#{label.assegna_nuovo_gruppo}" data-toggle="modal" data-target=".modal-reassign"></a></li>
+									<li><a th:if="${accreditamentoWrapper.canAssegnaStessoGruppo}" th:text="#{label.assegna_stesso_gruppo}" th:href="@{|accreditamento/${accreditamentoWrapper.accreditamento.id}/reassignSameCrecm|}"></a></li>
 								</ul>
 								<!-- menù a pulsanti separati per il provider -->
 								<th:block th:if="${#authentication.principal.isProvider()}">
@@ -87,6 +141,12 @@
 			</div>
 			<script th:inline="javascript">
 			/*<![CDATA[*/
+
+			    $(document).ready(function() {
+			    	if([[${reassignErrors}]]) {
+						$("#reassign-modal").modal("show");
+					}
+			    });
 
 			  	var tabSelected = "tab1";
 				$('a[data-toggle="tab"]').on('shown.bs.tab', function (e) {
