--- a/src/main/resources/templates/accreditamento/accreditamentoValidate.html
+++ b/src/main/resources/templates/accreditamento/accreditamentoValidate.html
@@ -60,30 +60,34 @@
 										<div th:if="${#fields.hasErrors('accreditamentoWrapper.valutazioneComplessiva')}" class="alert" th:errors="${accreditamentoWrapper.valutazioneComplessiva}"></div>
 									</div>
 
-									<div class="divider"  th:if="${#authentication.principal.hasProfile('SEGRETERIA')}"></div>
+									<th:block th:if="${#authentication.principal.hasProfile('SEGRETERIA') and accreditamentoWrapper.accreditamento.isValutazioneSegreteriaAssegnamento()}">
 
-									<div th:if="${#authentication.principal.hasProfile('SEGRETERIA')}">
-										<h4 th:text="#{label.seleziona_referee}"></h4>
-										<div class="item modalAlert" th:classappend="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')} ? 'bad'">
-											<select id="referee"
-												class="selectpicker required"
-												data-width="100%" data-style="btn-primary"
-												data-max-options="3"
-												multiple="multiple"
-												th:field="${accreditamentoWrapper.refereeGroup}"
-												data-actions-box="false" data-size="10"
-												data-hide-disabled="false"
-												title="Seleziona i referee..."
-												th:remove="all-but-first">
-												<option
-													th:each="referee, row: ${refereeList}"
-													th:value="${referee.id}"
-													th:text="${referee.nome + ' ' + referee.cognome}">
-												</option>
-											</select>
-											<div th:if="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')}" class="alert" th:errors="${accreditamentoWrapper.refereeGroup}"></div>
+										<div class="divider"></div>
+
+										<div>
+											<h4 th:text="#{label.seleziona_referee}"></h4>
+											<div class="item modalAlert" th:classappend="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')} ? 'bad'">
+												<select id="referee"
+													class="selectpicker required"
+													data-width="100%" data-style="btn-primary"
+													data-max-options="3"
+													multiple="multiple"
+													th:field="${accreditamentoWrapper.refereeGroup}"
+													data-actions-box="false" data-size="10"
+													data-hide-disabled="false"
+													title="Seleziona i referee..."
+													th:remove="all-but-first">
+													<option
+														th:each="referee, row: ${refereeList}"
+														th:value="${referee.id}"
+														th:text="${referee.nome + ' ' + referee.cognome}">
+													</option>
+												</select>
+												<div th:if="${#fields.hasErrors('accreditamentoWrapper.refereeGroup')}" class="alert" th:errors="${accreditamentoWrapper.refereeGroup}"></div>
+											</div>
 										</div>
-									</div>
+
+									</th:block>
 
 									<input id="submitButtonModal" type="submit" style="display: none;" />
 
@@ -173,6 +177,7 @@
 								<li class="divider actions"></li>
 								<li><a th:if="${accreditamentoWrapper.canConfermaValutazione}"
 									th:text="#{label.conferma_valutazione}" data-toggle="modal" data-target=".modal-confirm"></a></li>
+								<li><a th:if="${accreditamentoWrapper.canPresaVisione}" th:text="#{label.presa_visione}" onclick="alert('TODO')"></a></li>
 							<!-- mostra showAll -->
 							</ul>
 						</div>
